# Codi

./: .gitignore  README.md
app/: pyproject.toml
app/app/: __init__.py  main.py
